quick unit updates

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <path d="M12 7v10" />
                       <path d="M17 7v10" />
                     </svg>
-                    Item Master
+                    Item
                   </label>
                   <input type="text" id="item_master" placeholder="1050">
                 </div>
@@ -154,16 +154,17 @@
                   Content
                 </label>
                 <div class="quantity field__group">
+                  <span class="field__insert">Qty</span>
                   <span data-tooltip="Polybag" data-tooltip-location="bottom">
-                    <input type="text" id="pb_content" placeholder="Qty: 1"
+                    <input type="text" id="pb_content" placeholder="1"
                       data-highlight="[data-type='polybag'] .label__quantity">
                   </span>
                   <span data-tooltip="Master Carton" data-tooltip-location="bottom">
-                    <input type="text" id="mc_content" placeholder="Qty: 1"
+                    <input type="text" id="mc_content" placeholder="20"
                       data-highlight="[data-type='master'] .label__quantity">
                   </span>
                   <span data-tooltip="Inner Carton" data-tooltip-location="bottom">
-                    <input type="text" id="ic_content" placeholder="Qty: 1"
+                    <input type="text" id="ic_content" placeholder="5"
                       data-highlight="[data-type='inner'] .label__quantity">
                   </span>
                 </div>
@@ -802,7 +803,7 @@
                       </div>
                       <div class="shipping-mark__bottom">
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Item Master: </span>
+                          <span class="shipping-mark__label">Item: </span>
                           <span class="shipping-mark__item-master print-item-master">01D015</span>
                         </div>
                       </div>
@@ -887,7 +888,7 @@
                       </div>
                       <div class="shipping-mark__bottom">
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Item Master: </span>
+                          <span class="shipping-mark__label">Item: </span>
                           <span class="shipping-mark__item-master print-item-master">01D015</span>
                         </div>
                       </div>
