Fixed lbs. in weight fields

--- a/index.html
+++ b/index.html
@@ -786,11 +786,11 @@
                           <span class="shipping-mark__quantity print-box-qty" data-field="#sku">20</span> pcs
                         </div>
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Gross Weight lbs: </span>
+                          <span class="shipping-mark__label">Gross Weight: </span>
                           <span class="shipping-mark__gweight print-gross-weight">21.17 lbs</span>
                         </div>
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Net Weight lbs: </span>
+                          <span class="shipping-mark__label">Net Weight: </span>
                           <span class="shipping-mark__nweight print-net-weight">20.06 lbs</span>
                         </div>
                         <div class="shipping-mark__meta">
@@ -874,11 +874,11 @@
                           <span class="shipping-mark__quantity print-box-qty">20</span>pcs
                         </div>
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Gross Weight lbs: </span>
+                          <span class="shipping-mark__label">Gross Weight: </span>
                           <span class="shipping-mark__gweight print-gross-weight">21.17 lbs</span>
                         </div>
                         <div class="shipping-mark__meta">
-                          <span class="shipping-mark__label">Net Weight lbs: </span>
+                          <span class="shipping-mark__label">Net Weight: </span>
                           <span class="shipping-mark__nweight print-net-weight">20.06 lbs</span>
                         </div>
                         <div class="shipping-mark__meta">
