Fixed font family for the labels

--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
                 <div class="quantity field__group">
                   <span class="field__insert">Qty</span>
                   <span data-tooltip="Polybag" data-tooltip-location="bottom">
-                    <input type="text" id="pb_content" placeholder="1"
+                    <input type="number" id="pb_content" placeholder="1"
                       data-highlight="[data-type='polybag'] .label__quantity">
                   </span>
                   <span data-tooltip="Master Carton" data-tooltip-location="bottom">
-                    <input type="text" id="mc_content" placeholder="20"
+                    <input type="number" id="mc_content" placeholder="20"
                       data-highlight="[data-type='master'] .label__quantity">
                   </span>
                   <span data-tooltip="Inner Carton" data-tooltip-location="bottom">
-                    <input type="text" id="ic_content" placeholder="5"
+                    <input type="number" id="ic_content" placeholder="5"
                       data-highlight="[data-type='inner'] .label__quantity">
                   </span>
                 </div>
