--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 </select>
               </div>
 
+              <div class="field">
+                <label class="field__label" for="factory">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-factory"><path d="M2 20a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8l-7 5V8l-7 5V4a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2Z"/><path d="M17 18h1"/><path d="M12 18h1"/><path d="M7 18h1"/></svg>
+                  Factory
+                </label>
+                <select name="factory" id="factory">
+                  <option value="default">Default</option>
+                  <option value="sapona">Sapona</option>
+                </select>
+              </div>
+
               <div class="field__group">
                 <div class="field"
                   data-highlight=".label__item-master, .label__install-sku, .label__qr, #qr_path, .shipping-mark__item-master">
@@ -230,10 +241,9 @@
                 <div class="color-control">
                   <select name="color" id="color">
                     <option value="#ffffff">Default</option>
-                    <option value="#1f75ff">DropTech (#1f75ff)</option>
-                    <option value="#ff1c1c">SlimTech (#ff1c1c)</option>
-                    <option value="#ffff14">FoamTech (#ffff14)</option>
-                    <option value="#00ff04">BumpTech (#00ff04)</option>
+                    <option value="#1f75ff">Headphones (#1f75ff)</option>
+                    <option value="#ff1c1c">Headphones w/ Mic (#ff1c1c)</option>
+                    <option value="#00ff04">SlimTech (#00ff04)</option>
                   </select>
                   <div class="color-current"></div>
                 </div>
@@ -535,7 +545,7 @@
                 <path d="M12 8v8" />
                 <path d="m8 12 4 4 4-4" />
               </svg>
-              Download Shipping Marks
+              Shipping Marks (PDF)
             </button>
             <button class="button download__button download__button--upc">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -546,7 +556,7 @@
                 <path d="M12 18v-6" />
                 <path d="m9 15 3 3 3-3" />
               </svg>
-              Download UPC Labels
+              UPC Labels (PDF)
             </button>
           </div>
         </div>
@@ -617,6 +627,117 @@
                   <div class="label__datamatrix">Data Matrix</div>
                   <div class="label__internal-text">For PSB internal use only</div>
                 </div>
+              </main>
+
+            </div>
+          </div>
+
+          <div class="page page--a4 sapona sapona--hidden" data-type="master">
+            <div class="page__content print">
+
+              <header class="print__header">
+                <h1 class="print-header">
+                  <img src="dist/img/brenthaven_min.png">
+                </h1>
+                <h2>Master Carton UPC Label</h2>
+                <h3>Label size 4" tall x 6" wide</h3>
+                <span class="print__magenta">Magenta die line represents die cut of label &amp; does not print</span>
+              </header>
+
+              <main class="print__content label">
+                <div class="label__brand">
+                  <img class="label__logo print-logo" src="dist/img/brenthaven_min.png">
+                </div>
+
+                <div class="sapona__content">
+                  <div class="sapona__meta">
+                    <span class="label__item-master print-item-master">1050</span>
+                  </div>
+                  <div class="sapona__meta shipping-mark__sku print-box-sku">
+                    <span class="sku__part">1050</span>
+                    <span class="sku__part">001</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Description: </span>
+                    <div class="sapona__value label__description print-description">Edge Smart Connect Keyboard</div>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Qty per carton: </span>
+                    <span class="sapona__value shipping-mark__quantity print-box-qty" data-field="#sku">20</span>
+                    <span class="sapona__insert">pcs</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Gross Weight: </span>
+                    <span class="sapona__value shipping-mark__gweight print-gross-weight">21.17 lbs</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Net Weight: </span>
+                    <span class="sapona__value shipping-mark__nweight print-net-weight">20.06 lbs</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Carton Dims (LxWxH in): </span>
+                    <span class="sapona__value shipping-mark__length print-dim-length">18.3"</span>
+                    <span class="sapona__insert shipping_mark__insert">x</span>
+                    <span class="sapona__value shipping-mark__width print-dim-width">11.2"</span>
+                    <span class="sapona__insert shipping_mark__insert">x</span>
+                    <span class="sapona__value shipping-mark__height print-dim-height">13.4</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">PO#: </span>
+                    <span class="shipping-mark__po print-purchase-order">123456</span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label sapona__carton">Carton#: </span>
+                  </div>
+                  <div class="sapona__meta">
+                    <span class="sapona__label">Made in</span>
+                    <span class="sapona__value shipping-mark__source">The USA</span>
+                  </div>
+                </div>
+
+                <div class="label__upc">
+                  <svg class="barcode">
+                  </svg>
+                </div>
+
+                <!--<div class="label__source">
+                  Made in <span class="label__country print-country">China</span>
+                </div>
+
+                <div class="label__info">
+                  <span class="label__item">
+                    <span class="label__item-master print-item-master">1050</span>
+                    <span class="label__item-sku print-sku">1050001</span>
+                  </span>
+                  <span class="label__quantity">Qty: 1</span>
+                </div>
+
+                <div class="label__install">
+                  <span class="label__install-img">
+                    <span class="label__install-svg">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-wrench">
+                        <path
+                          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" />
+                      </svg>
+                    </span>
+                  </span>
+                  <div class="label__install-text">
+                    <div class="label__install-header">Installation Instructions</div>
+                    <div>Scan the QR code, or visit:</div>
+                    <div class="label__install-link"><span
+                        class="label__install-site print-install-base">brenthaven.com</span>/<span
+                        class="label__install-sku print-install-path">1050</span></div>
+                    <div>Thanks for helping reduce paper waste</div>
+                  </div>
+                  <div class="label__qr">QR</div>
+                </div>
+
+                <div class="label__internal">
+                  <div class="label__datamatrix">Data Matrix</div>
+                  <div class="label__internal-text">For PSB internal use only</div>
+                </div>-->
               </main>
 
             </div>
