Added Cali Prop 65 warning

--- a/index.html
+++ b/index.html
@@ -699,45 +699,6 @@
                   <svg class="barcode">
                   </svg>
                 </div>
-
-                <!--<div class="label__source">
-                  Made in <span class="label__country print-country">China</span>
-                </div>
-
-                <div class="label__info">
-                  <span class="label__item">
-                    <span class="label__item-master print-item-master">1050</span>
-                    <span class="label__item-sku print-sku">1050001</span>
-                  </span>
-                  <span class="label__quantity">Qty: 1</span>
-                </div>
-
-                <div class="label__install">
-                  <span class="label__install-img">
-                    <span class="label__install-svg">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-wrench">
-                        <path
-                          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" />
-                      </svg>
-                    </span>
-                  </span>
-                  <div class="label__install-text">
-                    <div class="label__install-header">Installation Instructions</div>
-                    <div>Scan the QR code, or visit:</div>
-                    <div class="label__install-link"><span
-                        class="label__install-site print-install-base">brenthaven.com</span>/<span
-                        class="label__install-sku print-install-path">1050</span></div>
-                    <div>Thanks for helping reduce paper waste</div>
-                  </div>
-                  <div class="label__qr">QR</div>
-                </div>
-
-                <div class="label__internal">
-                  <div class="label__datamatrix">Data Matrix</div>
-                  <div class="label__internal-text">For PSB internal use only</div>
-                </div>-->
               </main>
 
             </div>
@@ -1024,6 +985,22 @@
                           <span class="shipping-mark__label">Item: </span>
                           <span class="shipping-mark__item-master print-item-master">01D015</span>
                         </div>
+                      </div>
+                    </div>
+                    <div class="shipping-mark__prop65">
+                      <div class="shipping-mark__prop65-heading">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-alert-triangle"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"/><path d="M12 9v4"/><path d="M12 17h.01"/></svg>
+                        <div class="shipping-mark__prop65-warning">
+                          <span class="shipping-mark__prop65-california">California Proposition 65</span>
+                          <span class="shipping-mark__prop65-warn">Warning</span>
+                        </div>
+                      </div>
+                      <div class="shipping-mark__prop65-text">
+                        <p>This product can expose you to chemicals <br />
+                        which are known to the State of California <br />
+                        to cause cancer, birth defects or other reproductive harm.</p>
+                        
+                        <p>For more information go to www.P65Warnings.ca.gov</p>
                       </div>
                     </div>
                     <div class="shipping-mark__recycling">
