Adjusted shipping mark labels, adjusted QR code gen for Vault

--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
               </div>
 
               <div class="field__group">
-                <div class="field"
-                  data-highlight=".label__item-master, .label__install-sku, .label__qr, #qr_path, .shipping-mark__item-master">
+                <div class="field" data-highlight="
+                    .label__item-master, 
+                    .preview:not(.preview--vault) .label__install-sku, 
+                    .preview:not(.preview--vault) .label__qr, 
+                    .sidebar__fields:not(.sidebar--vault) #qr_path, 
+                    .shipping-mark__item-master"
+                  >
                   <label class="field__label" for="item_master">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                       stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -90,7 +95,13 @@
                   <input type="text" id="item_master" placeholder="1050">
                 </div>
 
-                <div class="field" data-highlight=".label__item-sku, .label__datamatrix">
+                <div class="field" data-highlight="
+                  .label__item-sku, 
+                  .preview--vault .label__datamatrix, 
+                  .preview--vault .label__install-sku, 
+                  .label__qr, 
+                  .sidebar--vault #qr_path"
+                  >
                   <label class="field__label" for="sku">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                       stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -206,6 +217,10 @@
                   <input type="text" id="qr_path" placeholder="1050" disabled>
                 </div>
                 <input type="text" id="qr_link" placeholder="https://brenthaven.com/1050">
+                <button class="qr__visibility field__button" data-tooltip="Toggle Instruction Panel" data-tooltip-location="left">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye-off"><path d="M9.88 9.88a3 3 0 1 0 4.24 4.24"/><path d="M10.73 5.08A10.43 10.43 0 0 1 12 5c7 0 10 7 10 7a13.16 13.16 0 0 1-1.67 2.68"/><path d="M6.61 6.61A13.526 13.526 0 0 0 2 12s3 7 10 7a9.74 9.74 0 0 0 5.39-1.61"/><line x1="2" x2="22" y1="2" y2="22"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/><circle cx="12" cy="12" r="3"/></svg>
+                </button>
                 <button class="qr__toggle field__button" data-tooltip="Customize QR Link" data-tooltip-location="left">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -222,6 +237,7 @@
                     <path d="M7 10V7a5 5 0 0 1 9.33-2.5" />
                   </svg>
                 </button>
+                
               </div>
 
               <div class="field" data-highlight=".label__internal">
@@ -296,7 +312,7 @@
                       <path d="m6 6 12 12" />
                     </svg>
                   </span>
-                  <input type="number" min="11" max="30" id="shipping_width" placeholder="Width"
+                  <input type="number" min="10" max="30" id="shipping_width" placeholder="Width"
                     data-highlight=".print-dim-width">
                   <span class="field__insert">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
