added Myanmar as source

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 <select name="brand" id="source">
                   <option value="china">China</option>
                   <option value="america">America</option>
+                  <option value="Myanmar">Myanmar</option>
                 </select>
               </div>
 
