updated vault instruction link to go to /assembly instead of /sku

--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
 
                 <div class="field" data-highlight="
                   .label__item-sku, 
-                  .preview--vault .label__datamatrix, 
-                  .preview--vault .label__install-sku, 
-                  .label__qr, 
-                  .sidebar--vault #qr_path"
+                  .preview--vault .label__datamatrix"
                   >
                   <label class="field__label" for="sku">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
