added cambodia and mexico as source options

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                 <select name="brand" id="source">
                   <option value="china">China</option>
                   <option value="america">America</option>
-                  <option value="Myanmar">Myanmar</option>
+                  <option value="myanmar">Myanmar</option>
+                  <option value="cambodia">Cambodia</option>
+                  <option value="mexico">Mexico</option>
                 </select>
               </div>
 
