added a header toggle for the labels

--- a/index.html
+++ b/index.html
@@ -456,6 +456,14 @@
                 </svg>
                 <span class="visually-hidden">Expand</span>
               </label>
+
+              <input type="checkbox" id="header-visibility" class="checkbox-container visually-hidden"
+                aria-labelledby="label-expanded" checked>
+              <label for="header-visibility" id="label-header" class="layout__expanded button" data-tooltip="Hide Header"
+                data-tooltip-location="bottom">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-align-center"><line x1="21" x2="3" y1="6" y2="6"/><line x1="17" x2="7" y1="12" y2="12"/><line x1="19" x2="5" y1="18" y2="18"/></svg>
+                <span class="visually-hidden">Hide Headers</span>
+              </label>
             </fieldset>
           </form>
 
