Fixed country field not changing custom factory MC labels

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">Made in</span>
-                    <span class="sapona__value shipping-mark__source">The USA</span>
+                    <span class="sapona__value shipping-mark__source print-country">The USA</span>
                   </div>
                 </div>
 
@@ -792,7 +792,7 @@
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">Made in</span>
-                    <span class="sapona__value shipping-mark__source">The USA</span>
+                    <span class="sapona__value shipping-mark__source print-country">The USA</span>
                   </div>
                 </div>
 
