Added size display toggle, and factory option fixes.

--- a/index.html
+++ b/index.html
@@ -331,6 +331,10 @@
                     data-highlight=".print-dim-height">
                   <span class="field__insert">in.</span>
                 </div>
+                <button class="size__visibility size__visibility--active field__button" data-tooltip="Toggle Size Display" data-tooltip-location="left">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye-off"><path d="M9.88 9.88a3 3 0 1 0 4.24 4.24"/><path d="M10.73 5.08A10.43 10.43 0 0 1 12 5c7 0 10 7 10 7a13.16 13.16 0 0 1-1.67 2.68"/><path d="M6.61 6.61A13.526 13.526 0 0 0 2 12s3 7 10 7a9.74 9.74 0 0 0 5.39-1.61"/><line x1="2" x2="22" y1="2" y2="22"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/><circle cx="12" cy="12" r="3"/></svg>
+                </button>
               </div>
 
               <div class="field" data-highlight=".print-box-qty">
@@ -705,11 +709,13 @@
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">Carton Dims (LxWxH in): </span>
-                    <span class="sapona__value shipping-mark__length print-dim-length">18.3"</span>
-                    <span class="sapona__insert shipping_mark__insert">x</span>
-                    <span class="sapona__value shipping-mark__width print-dim-width">11.2"</span>
-                    <span class="sapona__insert shipping_mark__insert">x</span>
-                    <span class="sapona__value shipping-mark__height print-dim-height">13.4</span>
+                    <span class="shipping-mark__dims">
+                      <span class="sapona__value shipping-mark__length print-dim-length">18.3"</span>
+                      <span class="sapona__insert shipping_mark__insert">x</span>
+                      <span class="sapona__value shipping-mark__width print-dim-width">11.2"</span>
+                      <span class="sapona__insert shipping_mark__insert">x</span>
+                      <span class="sapona__value shipping-mark__height print-dim-height">13.4</span>
+                    </span>
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">PO#: </span>
@@ -769,11 +775,13 @@
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">Carton Dims (LxWxH in): </span>
-                    <span class="sapona__value shipping-mark__length print-dim-length">18.3"</span>
-                    <span class="sapona__insert shipping_mark__insert">x</span>
-                    <span class="sapona__value shipping-mark__width print-dim-width">11.2"</span>
-                    <span class="sapona__insert shipping_mark__insert">x</span>
-                    <span class="sapona__value shipping-mark__height print-dim-height">13.4</span>
+                    <span class="shipping-mark__dims">
+                      <span class="sapona__value shipping-mark__length print-dim-length">18.3"</span>
+                      <span class="sapona__insert shipping_mark__insert">x</span>
+                      <span class="sapona__value shipping-mark__width print-dim-width">11.2"</span>
+                      <span class="sapona__insert shipping_mark__insert">x</span>
+                      <span class="sapona__value shipping-mark__height print-dim-height">13.4</span>
+                    </span>
                   </div>
                   <div class="sapona__meta">
                     <span class="sapona__label">Gross Weight: </span>
@@ -983,11 +991,13 @@
                         </div>
                         <div class="shipping-mark__meta">
                           <span class="shipping-mark__label">Carton Dims (LxWxH in): </span>
-                          <span class="shipping-mark__length print-dim-length">18.3"</span>
-                          <span class="shipping_mark__insert">x</span>
-                          <span class="shipping-mark__width print-dim-width">11.2"</span>
-                          <span class="shipping_mark__insert">x</span>
-                          <span class="shipping-mark__height print-dim-height">13.4</span>
+                          <span class="shipping-mark__dims">
+                            <span class="shipping-mark__length print-dim-length">18.3"</span>
+                            <span class="shipping_mark__insert">x</span>
+                            <span class="shipping-mark__width print-dim-width">11.2"</span>
+                            <span class="shipping_mark__insert">x</span>
+                            <span class="shipping-mark__height print-dim-height">13.4</span>
+                          </span>
                         </div>
                         <div class="shipping-mark__meta">
                           <span class="shipping-mark__label">Made in: </span>
@@ -1071,11 +1081,13 @@
                         </div>
                         <div class="shipping-mark__meta">
                           <span class="shipping-mark__label">Carton Dims (LxWxH in): </span>
-                          <span class="shipping-mark__length print-dim-length">18.3"</span>
-                          <span class="shipping_mark__insert">x</span>
-                          <span class="shipping-mark__width print-dim-width">11.2"</span>
-                          <span class="shipping_mark__insert">x</span>
-                          <span class="shipping-mark__height print-dim-height">13.4</span>
+                          <span class="shipping-mark__dims">
+                            <span class="shipping-mark__length print-dim-length">18.3"</span>
+                            <span class="shipping_mark__insert">x</span>
+                            <span class="shipping-mark__width print-dim-width">11.2"</span>
+                            <span class="shipping_mark__insert">x</span>
+                            <span class="shipping-mark__height print-dim-height">13.4</span>
+                          </span>
                         </div>
                         <div class="shipping-mark__meta">
                           <span class="shipping-mark__label">Made in: </span>
