Added custom field for a custom country so I don't get asked to add a new one every time they need a new one

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                   <option value="vietnam">Vietnam</option>
                   <option value="mexico">Mexico</option>
                   <option value="Taiwan">Taiwan</option>
+                  <option value="others">Others</option>
                 </select>
+                <input type="text" id="custom_source" placeholder="Enter country" class="hidden">
               </div>
 
               <div class="field">
