added styles to the custom country and instructions to ti-hi

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
                       <span>Accepted files: .PNG, .JPG, .JPEG, .GIF</span>
                     </div>
                   </div>
+                  <p class="instructions">Click on the image in the preview to remove it.</p>
                 </label>
               </div>
 
